--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
 <p>Googleアナリティクスの練習用のページでございます。</p>
+<img src="dusan-veverkolog-lEpxJ7A6c2k-unsplash.jpg" alt="">
 </body>
 </html>
